bin/testsuite/tests/compiler/src/errors/compiler425.swg
#global testerror "Err0023"
#test
{
    switch 5
    {
    case 4:
        break
    case 5.0:
        break
    }
}
